# plentyfs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  check  plentyfs.md
.github/workflows/: check.yml
src/: fs.rs  lib.rs  main.rs  mountoptions.rs
subplot/: daemon.py  plentyfs.py  plentyfs.yaml  runcmd.py
