[package]
name = "plentyfs"
version = "0.1.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.6"
libc = "0.2"
getopts = "0.2"

[dependencies.fuser]
version = "0.6"
features = ["abi-7-31"]

[dev-dependencies]
proptest = "0.10"
